terraform/ec2.tf
resource "aws_instance" "my-eks-mgmt" {
  ami                         = "ami-0de716d6197524dd9"
  associate_public_ip_address = "true"
  availability_zone           = "us-east-1b"
  instance_type               = "t3.medium"
  vpc_security_group_ids = [aws_security_group.eks_mgmt_sg.id]

  root_block_device {
    delete_on_termination = "true"
    encrypted             = "false"
    iops                  = "3000"
    throughput            = "125"
    volume_size           = "8"
    volume_type           = "gp3"
  }
  subnet_id         = "${aws_subnet.eks_pb_b.id}"
  depends_on = [ aws_eks_cluster.my-eks-demo ]
  user_data = <<-EOF
    #!/bin/bash
    set -e

    yum update -y
    yum install -y curl unzip jq bash-completion

    curl -LO https://s3.us-west-2.amazonaws.com/amazon-eks/1.32.3/2025-04-17/bin/linux/amd64/kubectl
    chmod +x kubectl
    mv kubectl /usr/local/bin/
    kubectl version --client || echo "kubectl install failed"

    curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
    helm version || echo "helm install failed"

    kubectl completion bash > /etc/bash_completion.d/kubectl
    helm completion bash > /etc/bash_completion.d/helm
  EOF
  tags = {
    Name = "my-eks-mgmt"
  }

}

resource "aws_security_group" "eks_mgmt_sg" {
    name        = "eks_mgmt_sg"
    description = "Security group for EKS management instance"
    vpc_id      = aws_vpc.eks_vpc.id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "eks_mgmt_sg"
    }
}
